Show calculation history

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
   <div class="calculator">
+    <div class="history-row hidden">
+      <div id="history" class="history"></div>
+      <button id="history-toggle" class="history-toggle" hidden>▼</button>
+    </div>
     <input type="text" id="display" class="display" placeholder="0">
     <div class="buttons">
       <button class="btn clear">C</button>
