--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="history" class="history"></div>
       <button id="history-toggle" class="history-toggle" hidden><svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm.5-13H11v6l5.2 3.2.8-1.3-4.5-2.7V7z"/></svg></button>
     </div>
-    <input type="text" id="display" class="display" placeholder="0">
+    <div id="display" class="display"></div>
     <div class="buttons">
       <button class="btn clear">C</button>
       <button class="btn op">/</button>
