--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
     <div id="display" class="display"></div>
     <div class="buttons">
       <button class="btn clear">C</button>
+      <button class="btn paren">()</button>
       <button class="btn op">/</button>
       <button class="btn op">*</button>
-      <button class="btn op">-</button>
 
       <button class="btn num">7</button>
       <button class="btn num">8</button>
       <button class="btn num">9</button>
-      <button class="btn op">+</button>
+      <button class="btn op">-</button>
 
       <button class="btn num">4</button>
       <button class="btn num">5</button>
       <button class="btn num">6</button>
-      <button class="btn equals">=</button>
+      <button class="btn op">+</button>
 
       <button class="btn num">1</button>
       <button class="btn num">2</button>
       <button class="btn num">3</button>
-      <button class="btn num">0</button>
+      <button class="btn equals">=</button>
 
+      <button class="btn num">0</button>
       <button class="btn num">.</button>
       <button class="btn backspace"><svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z"/></svg></button>
     </div>
